- renamed tracing plugin name

--- a/tracing-plugin/plugin.yaml
+++ b/tracing-plugin/plugin.yaml
@@ -1,6 +1,6 @@
-name: java-tracing-plugin
+name: tracing-plugin
 description: Plugin para configuração de Tracing
-display-name: java-tracing-plugin
+display-name: Tracing Plugin
 picture: plugin.png
 category: backend
 compatibility:
