- added _about_ and _usage_ tracing docs - created observability stackfile

--- a/stackfiles/default.yaml
+++ b/stackfiles/default.yaml
@@ -1,6 +1,3 @@
 type: app
-description: Stackfile para um REST API Web Service baseado em Spring Boot, com métricas e outras funcionalidades.
-# template used to create the project
+description: Stackfile para um REST API Web Service baseado em Spring Boot.
 template: graphene-java-api-stack/spring-web-api-template
-plugins:
- - plugin: graphene-java-api-stack/metrics-plugin
