--- a/metrics-plugin/plugin.yaml
+++ b/metrics-plugin/plugin.yaml
@@ -16,13 +16,14 @@ technologies: # Ref: https://docs.stackspot.com/latest/docs/creators-guide/yaml/
 types:
   - app
 hooks:
-  - type: edit
+  - type: run
     trigger: after-render
-    path: build.gradle
-    changes:
-      - search:
-          string: "dependencies {"
-          insert-after:
-            snippet: snippets/metrics-dependencies.txt
-          when:
-            not-exists-snippet: snippets/metrics-dependencies.txt
+    working-dir: "{{project_name}}"
+    linux:
+      - chmod 755 gradlew
+      - ./gradlew addDep --dep spring_actuator
+    windows:
+      - gradlew.bat addDep --dep spring_actuator
+    mac:
+      - chmod 755 gradlew
+      - ./gradlew addDep --dep spring_actuator 
