--- a/spring-web-api-template/template.yaml
+++ b/spring-web-api-template/template.yaml
@@ -20,6 +20,13 @@ inputs:
       - '17'
       - '11'
       - '8'
+  - label: Select the build tool
+    type: text
+    items:
+      - Maven
+      - Gradle
+    default: Maven
+    name: build_tool
   - label: Enter an Artifact ID for the project
     type: text
     name: project_artifact_id
@@ -32,3 +39,19 @@ inputs:
 global-computed-inputs:
   "base_package": "{{project_group_id}}.{{project_artifact_id}}"
   "package_dir": "{{global_computed_inputs.base_package|replace('.','/')}}"
+
+hooks:
+  - type: render-templates
+    trigger: after-render
+    path: buildtool/gradle
+    condition:
+      variable: build_tool
+      operator: ==
+      value: Gradle
+  - type: render-templates
+    trigger: after-render
+    path: buildtool/maven
+    condition:
+      variable: build_tool
+      operator: ==
+      value: Maven
