--- a/spring-web-api-template/template.yaml
+++ b/spring-web-api-template/template.yaml
@@ -9,35 +9,35 @@ inputs:
     items:
       - '3.0.0-M4'
       - '2.7.2'
+    default: '2.7.2'
+  - label: Enter a version for the project
+    type: text
+    name: project_version
+    default: '0.0.1-SNAPSHOT'
   - label: Enter a Group ID for the project
     type: text
     name: project_group_id
+    default: br.com.graphene
     global: true
   - label: Select the Java version
     type: text
     name: project_java_version
+    global: true
     items:
       - '17'
       - '11'
-      - '8'
-  - label: Select the build tool
+  - label: Select the project build tool
     type: text
     items:
       - Maven
       - Gradle
     default: Maven
     name: build_tool
-  - label: Enter an Artifact ID for the project
-    type: text
-    name: project_artifact_id
     global: true
-  - label: Enter a version for the project
-    type: text
-    name: project_version
-    default: '0.0.1-SNAPSHOT'
 
 global-computed-inputs:
-  "base_package": "{{project_group_id}}.{{project_artifact_id}}"
+  "project_artifact_id": "{{project_name}}"
+  "base_package": "{{project_group_id}}.{{project_name}}"
   "package_dir": "{{global_computed_inputs.base_package|replace('.','/')}}"
 
 hooks:
