--- a/spring-web-api-template/templates/docker-compose.yaml
+++ b/spring-web-api-template/templates/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3.3'
 services:
-  ms-{{project_name}}:
-    image: {{project_name}}
+  ms-{{project_artifact_id}}:
+    image: {{project_artifact_id}}
     restart: always
     environment:
       SERVER_PORT: 8080
@@ -9,8 +9,8 @@ services:
       - "8080:8080"
     build: .
     networks:
-      - app-{{project_name}}
+      - app-{{project_artifact_id}}
 networks:
-  app-{{project_name}}:
+  app-{{project_artifact_id}}:
     driver: bridge
 
