--- a/spring-web-api-template/buildtool/gradle/build.gradle
+++ b/spring-web-api-template/buildtool/gradle/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    runtimeOnly "io.micrometer:micrometer-registry-prometheus:${micrometerVersion}"
+    runtimeOnly 'io.micrometer:micrometer-registry-prometheus:${micrometerVersion}'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
