- added validation to enable the plugin be applied multiple times

--- a/tracing-plugin/plugin.yaml
+++ b/tracing-plugin/plugin.yaml
@@ -49,6 +49,21 @@ hooks:
     path: pom.xml
     indent: "    "
     changes:
+      - xpath: "dependencies/dependency[groupId='io.opentracing.contrib']"
+        clear: true
+  - type: edit
+    trigger: after-render
+    path: pom.xml
+    changes:
+      - search:
+          string: "<dependency />"
+          replace-by:
+            value: " "
+  - type: edit-xml
+    trigger: after-render
+    path: pom.xml
+    indent: "    "
+    changes:
       - xpath: "dependencies"
         append:
           snippet: snippets/tracing-dependencies-maven.xml
