--- a/spring-web-api-template/templates/src/main/resources/application.yaml
+++ b/spring-web-api-template/templates/src/main/resources/application.yaml
@@ -1,23 +1,4 @@
 ##Default profile
-server:
-  port: ${SERVER_PORT:8080}
-
----
-#Local profile
 spring:
-  profiles: local
-
----
-#Dev profile
-spring:
-    profiles: dev
-
----
-#Homologation profile
-spring:
-  profiles: hom
-
----
-#Production profile
-spring:
-  profiles: prod
+  application:
+    name: meuapp
