--- a/logging-plugin/plugin.yaml
+++ b/logging-plugin/plugin.yaml
@@ -1,5 +1,5 @@
 name: logging-plugin
-description: Este plugin fornece uma pré-configuração para logs estruturados em formato JSON.
+description: This plugin gives a pre configured structure logs in JSON format.
 display-name: Logging
 picture: plugin.png
 category: backend # Ref: https://docs.stackspot.com/latest/docs/creators-guide/yaml/#category
@@ -43,4 +43,4 @@ hooks:
       value: Maven
 
 
-      
+
