--- a/stack.yaml
+++ b/stack.yaml
@@ -1,4 +1,4 @@
-description: Develop and publish Web APIs based on Stack Java for Cloud Native environments, with Spring Boot and other Spring technologies.
+description: Develop and publish Web APIs based on Java Stack for Cloud Native environments with Spring Boot and other Spring technologies.
 name: graphene-java-api-stack
 display-name: Stack Web API with Spring Boot
 picture: stack.png
