--- a/stack.yaml
+++ b/stack.yaml
@@ -18,3 +18,6 @@ use-cases:
   - title: REST API Web Service with metrics and tracing
     content: docs/use-case.md
     stackfile: stackfiles/observability.yaml
+  - title: REST API Web Service with database relational
+    content: docs/use-case-db-relational.md
+    stackfile: stackfiles/db-relational.yaml    
