--- a/db-relational-plugin/plugin.yaml
+++ b/db-relational-plugin/plugin.yaml
@@ -1,6 +1,6 @@
 name: db-relational-plugin
 description: Plugin to configure a relational database at project
-display-name: Relational DB
+display-name: db-relational-plugin
 picture: plugin.png
 category: backend
 compatibility:
