--- a/db-relational-plugin/snippets/postgresql/application.yaml
+++ b/db-relational-plugin/snippets/postgresql/application.yaml
@@ -1,8 +1,8 @@
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://postgresql-server:5432/test
-    username: postgres
-    password: postgres
+    url: jdbc:postgresql://postgresql-server:5432/${POSTGRES_DB:test}
+    username: ${POSTGRES_USER:postgres}
+    password: ${POSTGRES_PASSWORD:postgres}
   jpa:
     show-sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
