--- a/logging-plugin/plugin.yaml
+++ b/logging-plugin/plugin.yaml
@@ -16,6 +16,9 @@ technologies: # Ref: https://docs.stackspot.com/latest/docs/creators-guide/yaml/
 types:
   - app
 hooks:
+  - type: run-script
+    trigger: before-render
+    script: ../common_scripts/hooks/asking_for_required_information.py
   - type: edit
     trigger: after-render
     path: build.gradle
@@ -37,6 +40,8 @@ hooks:
       - xpath: .//dependencies
         append:
           snippet: snippets/logging-dependencies-maven.txt
+        when:
+          not-exists: ./dependencies/dependency/groupId[.='net.logstash.logback']/../artifactId[.='logstash-logback-encoder']
     condition:
       variable: build_tool
       operator: ==
