--- a/tracing-plugin/plugin.yaml
+++ b/tracing-plugin/plugin.yaml
@@ -14,22 +14,10 @@ technologies:
   - "Api"
 types:
   - app
-inputs:
-  - label: Enter the base package for the project
-    type: text
-    name: project_group_id
-    pattern: '(^[a-zA-Z_\d.]*)'
-    default: br.com.graphene
-    global: true
-  - label: Select the project build tool
-    type: text
-    items:
-      - Maven
-      - Gradle
-    default: Maven
-    name: build_tool
-    global: true
 hooks:
+  - type: run-script
+    trigger: before-render
+    script: ../common_scripts/hooks/asking_for_required_information.py
   - type: edit
     trigger: after-render
     path: build.gradle
@@ -48,34 +36,11 @@ hooks:
     trigger: after-render
     path: pom.xml
     changes:
-      - xpath: "dependencies/dependency[artifactId='opentracing-spring-jaeger-starter']"
-        clear: true
-    condition:
-      variable: build_tool
-      operator: ==
-      value: Maven
-  - type: edit
-    trigger: after-render
-    path: pom.xml
-    changes:
-      - search:
-          string: "<dependency />"
-          replace-by:
-            value: " "
-    condition:
-      variable: build_tool
-      operator: ==
-      value: Maven
-  - type: edit-xml
-    trigger: after-render
-    path: pom.xml
-    changes:
       - xpath: "dependencies"
         append:
           snippet: snippets/tracing-dependencies-maven.xml
-#          Add in future version of CLI
-#          when:
-#            not-exists-snippet: snippets/tracing-dependencies-maven.xml
+        when:
+          not-exists: ./dependencies/dependency/groupId[.='io.opentracing.contrib']/../artifactId[.='opentracing-spring-jaeger-starter']
     condition:
       variable: build_tool
       operator: ==
