--- a/spring-web-api-template/templates/docker-compose.yaml
+++ b/spring-web-api-template/templates/docker-compose.yaml
@@ -5,10 +5,9 @@ services:
     container_name: {{project_artifact_id}}
     restart: always
     environment:
-      SERVER_PORT: 8080
-      SPRING_PROFILES_ACTIVE:
+      SPRING_PROFILES_ACTIVE: default
     ports:
-      - "8080:8080"
+      - ${APP_INGRESS_SERVER_PORT:-8080}:8080
     build: .
     healthcheck:
       test: curl http://localhost:8080
