--- a/spring-web-api-template/buildtool/gradle/build.gradle
+++ b/spring-web-api-template/buildtool/gradle/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'org.springframework.boot' version '{{spring_boot_version}}'
-    id 'io.spring.dependency-management' version '1.0.12.RELEASE'
+    id 'io.spring.dependency-management' version '1.1.0'
     id 'java'
     id 'maven-publish'
 }
@@ -8,10 +8,6 @@ plugins {
 group = '{{project_group_id}}'
 version = '{{project_version}}'
 sourceCompatibility = '{% if project_java_version == '8'%}1.8{% else %}{{project_java_version}}{% endif %}'
-
-ext {
-    micrometerVersion = '1.9.3'
-}
 
 publishing {
     publications {
@@ -32,14 +28,13 @@ configurations {
 
 repositories {
     mavenCentral()
-    maven { url 'https://repo.spring.io/milestone' }
 }
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    runtimeOnly 'io.micrometer:micrometer-registry-prometheus:'.concat(micrometerVersion)
+    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
